hphp/hack/test/typecheck/hh_fixme3.php
<?hh // partial

function test(): int {
  /* HH_FIXME] */ return 'foo';
}
